2020-03-30  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200330
	Merge with NetBSD make, pick up
	o make.h: extern debug_file

2020-03-18  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200318
	Merge with NetBSD make, pick up
	o meta.c: meta_oodate, check for corrupted meta file
	  earlier and more often.

2020-02-20  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200220

2020-02-19  Simon J Gerraty  <sjg@beast.crufty.net>

	* boot-strap: unset MAKEFLAGS

2020-02-12  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION (_MAKE_VERSION): 20200212
	* meta.c: meta_compat_parent check for USE_FILEMON
	  patch from Soeren Tempel

2020-02-05  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION: 20200205
	Merge with NetBSD make, pick up
	o meta.c: fix compat mode, need to call meta_job_output()
	o job.c: extra fds for meta mode not needed if using filemon_dev

2020-01-22  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION: 20200122
	Merge with NetBSD make, pick up
	o meta.c: avoid passing NULL to filemon_*() when meta_needed()
	  returns FALSE.

2020-01-21  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION: 20200121
	Merge with NetBSD make, pick up
	o filemon/filemon_{dev,ktrace}.c: allow selection of
	  filemon implementation.  filemon_dev.c uses the kernel module
	  while filemon_ktrace.c leverages the fktrace api available in
	  NetBSD.  filemon_ktrace.c can hopefully form the basis for
	  adding support for other tracing mechanisms such as strace on
	  Linux.
	o meta.c: when target is out-of-date per normal make rules
	  record value of .OODATE in meta file.

2019-09-26  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION: 20190926
	  Merge with NetBSD make, pick up
	  o parse.c: don't pass NULL to realpath(3)
	    some versions cannot handle it.

2019-04-09  Simon J Gerraty  <sjg@beast.crufty.net>

	* VERSION: 20190409
	  Merge with NetBSD make, pick up