@@ -1,4 +1,4 @@
-/*	$NetBSD: make.h,v 1.105 2020/03/30 02:41:06 sjg Exp $	*/
+/*	$NetBSD: make.h,v 1.107 2020/04/03 03:35:16 sjg Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
